<br>
<br>
<b>2.0.x</b><br>
1) init.d/goahead: add codel auto qos mode support in WebUI.<br>
2) init.d/goahead: remove simple tos based qos support(use port based or codel instead for).<br>
3) miniupnpd: up to 1.9.20141209 version.<br>
4) kernel: arch/ralink: fix mem autodetect if highmem support disabled(limit to 256Mb).<br>
5) kernel: introduce and use generic init task.<br>
6) kernel: mips: backport some upstream fixes.<br>
7) kernel: irq: disallow commit to random entropy pool from every irq(decrease latency).<br>
8) kernel: enable BQL/DQL by default for 8Mb flash with DDR RAM devices(decrease latency).<br>
9) kernel: fastpath: cleanup and small optimize.<br>
10) kernel: inetdevice: fixed signed integer overflow.<br>
11) kernel: net/raeth: small cleanup.<br>
12) kernel: net: avoid to hang up on sending due to sysctl configuration overflow.<br>
13) kernel: net: ipmr: limit MRT_TABLE identifiers.<br>
14) kernel: net: net_sched: backport codel/fq_codel from 3.17 kernel tree.<br>
15) kernel: net: performance fix for process_backlog.<br>
16) kernel: net: reduce net_rx_action() latency to 2 HZ.<br>
17) kernel: netfilter: cttimeout: fix buffer overflow.<br>
18) kernel: pkt_sched: avoid requeues if possible.<br>
19) kernel: net_sched: more precise pkt_len computation.<br>
20) kernel: net_sched: better precise estimation on packet length for untrusted packets.<br>
21) kernel: tcp: allow for bigger reordering level.<br>
22) kernel: tcp: fix possible NULL dereference in tcp_vX_send_reset().<br>
23) kernel: tcp: tcp_make_synack() can use alloc_skb().<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) add support dualstack ipv6/4 with dhcp v6/ra/6rd uplink support (need more info from ISP).<br>
3) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>